# stepper_control_system

android_app/: README.md  package.json
android_app/src/: App.js  config.js
backend/: app.py  config.py  requirements.txt  wsgi.py
pico_firmware/: CMakeLists.txt  pico_sdk_import.cmake
pico_firmware/src/: main.c  motor_control.c  motor_control.h  registers.h  switches.c  switches.h  tmc2130.c  tmc2130.h  uart_protocol.c  uart_protocol.h
rpi_zero_agent/: backend_comm.py  config.ini  config_manager.py  main.py  mqtt_client.py  requirements.txt  serial_handler.py  utils.py
web_app/: README.md  package.json
web_app/src/: App.css  App.js  config.js
